FRONTEND: Fixed the alignment of buttons in community profile page

--- a/backend/api/core/static/style.css
+++ b/backend/api/core/static/style.css
@@ -1351,6 +1351,18 @@ img {
   color: #D9D9D9;
 }
 
+ .community-members {
+  display: inline-block;
+  padding: 0px 4px;
+  border: none;
+  color: #D9D9D9;
+  text-align: center;
+  text-decoration: none;
+  background: none;
+  margin-bottom:10px;
+}
+
+
 
 /* Media Queries */
 @media (max-width: 991.98px) { 
